--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "bootstrap": "^5.3.2",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
